[gd_scene load_steps=9 format=2]

[ext_resource path="res://Montserrat-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://Images/Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Ufo.png" type="Texture" id=4]
[ext_resource path="res://396239__romariogrande__alien-dream.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_left = 0.00234117
anchor_right = 1.00234
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Defend" type="Button" parent="."]
margin_left = 99.6017
margin_top = 181.69
margin_right = 519.602
margin_bottom = 262.69
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.568627, 0.568627, 0.568627, 1 )
text = "Defend"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quest" type="Button" parent="."]
margin_left = 99.6017
margin_top = 256.988
margin_right = 519.602
margin_bottom = 337.988
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.364706, 0.364706, 0.364706, 1 )
text = "Quest"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrades" type="Button" parent="."]
margin_left = 99.6017
margin_top = 338.566
margin_right = 519.602
margin_bottom = 419.566
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.364706, 0.364706, 0.364706, 1 )
text = "Upgrades"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="Button" parent="."]
margin_left = 98.0459
margin_top = 424.8
margin_right = 644.046
margin_bottom = 505.8
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.364706, 0.364706, 0.364706, 1 )
text = "Character Select"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Code" type="Button" parent="."]
margin_left = 98.329
margin_top = 510.702
margin_right = 644.329
margin_bottom = 591.703
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover = Color( 0.364706, 0.364706, 0.364706, 1 )
text = "Reedem code"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 98.329
margin_top = 582.135
margin_right = 644.329
margin_bottom = 663.136
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover = Color( 0.364706, 0.364706, 0.364706, 1 )
text = "Quit"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 98.53
margin_top = 43.438
margin_right = 596.53
margin_bottom = 118.438
custom_fonts/font = SubResource( 3 )
text = "Space Shooters"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Code_Text" type="TextEdit" parent="."]
visible = false
margin_left = 354.868
margin_top = 534.047
margin_right = 629.868
margin_bottom = 573.047
custom_fonts/font = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 476.808
margin_top = 264.746
margin_right = 1397.81
margin_bottom = 782.746
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -1.0
autoplay = true
[connection signal="pressed" from="Defend" to="." method="_on_Defend_pressed"]
[connection signal="pressed" from="Quest" to="." method="_on_Quest_pressed"]
[connection signal="pressed" from="Upgrades" to="." method="_on_Upgrades_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_Select_pressed"]
[connection signal="pressed" from="Code" to="." method="_on_Code_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
